--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,18 +4,19 @@
 
 :root {
   --background: #ffffff;
+  --white: #ffffff;
   --foreground: #171717;
+  --black: #17171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+  background-color: var(--white);
+  font-size: 62.5%;
+  color: var(--black);
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  height: 100%;
+  color: var(--black);
   font-family: Arial, Helvetica, sans-serif;
 }
