--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,7 @@ body {
   color: var(--black);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.ant-drawer-bottom > .ant-drawer-content-wrapper {
+  box-shadow: none;
+}
