fix: ui 수정 및 기타 수정

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+image {
+  width: 100%;
+}
+
 .ant-drawer-bottom > .ant-drawer-content-wrapper {
   box-shadow: none;
 }
