--- a/app/globals.css
+++ b/app/globals.css
@@ -11,14 +11,15 @@
 
 html {
   background-color: var(--white);
-  font-size: 62.5%;
+  /* font-size: 62.5%; */
   color: var(--black);
 }
 
 body {
   height: 100%;
   color: var(--black);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: Pretendard;
 }
 
 image {
