chore: button, a 태그의 default style 설정

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,10 +12,10 @@
 html {
   background-color: var(--white);
   color: var(--black);
-  -webkit-user-select:none;
-  -moz-user-select:none;
-  -ms-user-select:none;
-  user-select:none
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 body {
@@ -34,4 +34,9 @@ image {
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+button,
+a {
+  cursor: pointer;
 }
